--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,58 @@
         <script src="socket.io-client/socket.io.js"></script>
         <script src="angularjs/angular.min.js"></script>
         <script src="checkers.js"></script>
+        <script src="angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css"/>
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     </head>
     <body ng-app="checkers" ng-controller="checkerctrl as vm">
         <div class="checkers" id="main">
-
+        	<div class="row-fluid">
+        		<div class="col-md-12" style="overflow:auto">
+        			<div class="col-md-4">
+        				<div class="box">
+	        				1A
+	        			</div>
+        			</div>
+        			<div class="col-md-4">
+        				<div class="box">1B</div>
+        			</div>
+        			<div class="col-md-4">
+        				<div class="box">1C</div>
+        			</div>
+        		</div>
+        	</div>
+        	<div class="row-fluid">
+        		<div class="col-md-12" style="overflow:auto">
+        			<div class="col-md-4">
+        				<div class="box">
+	        				2A
+	        			</div>
+        			</div>
+        			<div class="col-md-4">
+        				<div class="box">2B</div>
+        			</div>
+        			<div class="col-md-4">
+        				<div class="box">2C</div>
+        			</div>
+        		</div>
+        	</div>
+        	<div class="row-fluid">
+        		<div class="col-md-12" style="overflow:auto">
+        			<div class="col-md-4">
+        				<div class="box">
+	        				3A
+	        			</div>
+        			</div>
+        			<div class="col-md-4">
+        				<div class="box">3B</div>
+        			</div>
+        			<div class="col-md-4">
+        				<div class="box">3C</div>
+        			</div>
+        		</div>
+        	</div>
         </div>
 
 
