added short term fix for duplicate game assignments.

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         	<div class="row-fluid">
         		<div class="col-md-12" style="overflow:auto">
         			<div class="col-md-4">
-        				<div class="box">
+        				<div class="box" ng-click="moveMade('1A')">
 	        				1A
 	        			</div>
         			</div>
