added beginnings of move validation. Added queen into vm.pieces as queens can move everywhere

--- a/public/index.html
+++ b/public/index.html
@@ -53,19 +53,19 @@
                 <td id="G6"></td>
                 <td id="H6"></td> -->
                 <td id="E1">
-                    <i ng-if="checkPosition('A1')===false" ng-click = "movehere('A1')">&nbsp;</i>
+                    <i ng-if="checkPosition('A1')===false" ng-click = "movehere('A1')" ng-class="getPositionClass('A1')">&nbsp;</i>
                     <i ng-if="checkPosition('A1')===true" ng-click = "pieceselected('A1')" ng-class="getPositionClass('A1')"></i>
                 </td>
                 <td id="E2">
-                    <i ng-if="checkPosition('A2')===false" ng-click = "movehere('A2')">&nbsp;</i>
+                    <i ng-if="checkPosition('A2')===false" ng-click = "movehere('A2')" ng-class="getPositionClass('A2')">&nbsp;</i>
                     <i ng-if="checkPosition('A2')===true" ng-click = "pieceselected('A2')" ng-class="getPositionClass('A2')"></i>
                 </td>
                 <td id="F3">
-                    <i ng-if="checkPosition('A3')===false" ng-click = "movehere('A3')">&nbsp;</i>
+                    <i ng-if="checkPosition('A3')===false" ng-click = "movehere('A3')" ng-class="getPositionClass('A3')">&nbsp;</i>
                     <i ng-if="checkPosition('A3')===true" ng-click = "pieceselected('A3')" ng-class="getPositionClass('A3')"></i>
                 </td>
                 <td id="E4">
-                    <i ng-if="checkPosition('A4')===false" ng-click = "movehere('A4')">&nbsp;</i>
+                    <i ng-if="checkPosition('A4')===false" ng-click = "movehere('A4')" ng-class="getPositionClass('A4')">&nbsp;</i>
                     <i ng-if="checkPosition('A4')===true" ng-click = "pieceselected('A4')" ng-class="getPositionClass('A4')"></i>
                 </td>
             </tr>
@@ -79,19 +79,19 @@
                 <td id="G5"></td>
                 <td id="H5"></td> -->
                 <td id="E1">
-                    <i ng-if="checkPosition('B1')===false" ng-click = "movehere('B1')">&nbsp;</i>
+                    <i ng-if="checkPosition('B1')===false" ng-click = "movehere('B1')" ng-class="getPositionClass('B1')">&nbsp;</i>
                     <i ng-if="checkPosition('B1')===true" ng-click = "pieceselected('B1')" ng-class="getPositionClass('B1')"></i>
                 </td>
                 <td id="E2">
-                    <i ng-if="checkPosition('B2')===false" ng-click = "movehere('B2')">&nbsp;</i>
+                    <i ng-if="checkPosition('B2')===false" ng-click = "movehere('B2')" ng-class="getPositionClass('B2')">&nbsp;</i>
                     <i ng-if="checkPosition('B2')===true" ng-click = "pieceselected('B2')" ng-class="getPositionClass('B2')"></i>
                 </td>
                 <td id="F3">
-                    <i ng-if="checkPosition('B3')===false" ng-click = "movehere('B3')">&nbsp;</i>
+                    <i ng-if="checkPosition('B3')===false" ng-click = "movehere('B3')" ng-class="getPositionClass('B3')">&nbsp;</i>
                     <i ng-if="checkPosition('B3')===true" ng-click = "pieceselected('B3')" ng-class="getPositionClass('B3')"></i>
                 </td>
                 <td id="E4">
-                    <i ng-if="checkPosition('B4')===false" ng-click = "movehere('B4')">&nbsp;</i>
+                    <i ng-if="checkPosition('B4')===false" ng-click = "movehere('B4')" ng-class="getPositionClass('B4')">&nbsp;</i>
                     <i ng-if="checkPosition('B4')===true" ng-click = "pieceselected('B4')" ng-class="getPositionClass('B4')"></i>
                 </td>
             </tr>
@@ -105,19 +105,19 @@
                 <td id="G4"></td>
                 <td id="H4"></td> -->
                 <td id="E1">
-                    <i ng-if="checkPosition('C1')===false" ng-click = "movehere('C1')">&nbsp;</i>
+                    <i ng-if="checkPosition('C1')===false" ng-click = "movehere('C1')" ng-class="getPositionClass('C1')">&nbsp;</i>
                     <i ng-if="checkPosition('C1')===true" ng-click = "pieceselected('C1')" ng-class="getPositionClass('C1')"></i>
                 </td>
                 <td id="E2">
-                    <i ng-if="checkPosition('C2')===false" ng-click = "movehere('C2')">&nbsp;</i>
+                    <i ng-if="checkPosition('C2')===false" ng-click = "movehere('C2')" ng-class="getPositionClass('C2')">&nbsp;</i>
                     <i ng-if="checkPosition('C2')===true" ng-click = "pieceselected('C2')" ng-class="getPositionClass('C2')"></i>
                 </td>
                 <td id="F3">
-                    <i ng-if="checkPosition('C3')===false" ng-click = "movehere('C3')">&nbsp;</i>
+                    <i ng-if="checkPosition('C3')===false" ng-click = "movehere('C3')" ng-class="getPositionClass('C3')">&nbsp;</i>
                     <i ng-if="checkPosition('C3')===true" ng-click = "pieceselected('C3')" ng-class="getPositionClass('C3')"></i>
                 </td>
                 <td id="E4">
-                    <i ng-if="checkPosition('C4')===false" ng-click = "movehere('C4')">&nbsp;</i>
+                    <i ng-if="checkPosition('C4')===false" ng-click = "movehere('C4')" ng-class="getPositionClass('C4')">&nbsp;</i>
                     <i ng-if="checkPosition('C4')===true" ng-click = "pieceselected('C4')" ng-class="getPositionClass('C4')"></i>
                 </td>
             </tr>
@@ -131,19 +131,19 @@
                 <td id="G3"></td>
                 <td id="H3"></td> -->
                 <td id="E1">
-                    <i ng-if="checkPosition('D1')===false" ng-click = "movehere('D1')">&nbsp;</i>
+                    <i ng-if="checkPosition('D1')===false" ng-click = "movehere('D1')" ng-class="getPositionClass('D1')">&nbsp;</i>
                     <i ng-if="checkPosition('D1')===true" ng-click = "pieceselected('D1')" ng-class="getPositionClass('D1')"></i>
                 </td>
                 <td id="E2">
-                    <i ng-if="checkPosition('D2')===false" ng-click = "movehere('D2')">&nbsp;</i>
+                    <i ng-if="checkPosition('D2')===false" ng-click = "movehere('D2')" ng-class="getPositionClass('D2')">&nbsp;</i>
                     <i ng-if="checkPosition('D2')===true" ng-click = "pieceselected('D2')" ng-class="getPositionClass('D2')"></i>
                 </td>
                 <td id="F3">
-                    <i ng-if="checkPosition('D3')===false" ng-click = "movehere('D3')">&nbsp;</i>
+                    <i ng-if="checkPosition('D3')===false" ng-click = "movehere('D3')" ng-class="getPositionClass('D3')">&nbsp;</i>
                     <i ng-if="checkPosition('D3')===true" ng-click = "pieceselected('D3')" ng-class="getPositionClass('D3')"></i>
                 </td>
                 <td id="E4">
-                    <i ng-if="checkPosition('D4')===false" ng-click = "movehere('D4')">&nbsp;</i>
+                    <i ng-if="checkPosition('D4')===false" ng-click = "movehere('D4')" ng-class="getPositionClass('D4')">&nbsp;</i>
                     <i ng-if="checkPosition('D4')===true" ng-click = "pieceselected('D4')" ng-class="getPositionClass('D4')"></i>
                 </td>
             </tr>
@@ -157,19 +157,19 @@
                 <td id="G4"></td>
                 <td id="H4"></td> -->
                 <td id="E1">
-                    <i ng-if="checkPosition('E1')===false" ng-click = "movehere('E1')">&nbsp;</i>
+                    <i ng-if="checkPosition('E1')===false" ng-click = "movehere('E1')" ng-class="getPositionClass('E1')">&nbsp;</i>
                     <i ng-if="checkPosition('E1')===true" ng-click = "pieceselected('E1')" ng-class="getPositionClass('E1')"></i>
                 </td>
                 <td id="E2">
-                    <i ng-if="checkPosition('E2')===false" ng-click = "movehere('E2')">&nbsp;</i>
+                    <i ng-if="checkPosition('E2')===false" ng-click = "movehere('E2')" ng-class="getPositionClass('E2')">&nbsp;</i>
                     <i ng-if="checkPosition('E2')===true" ng-click = "pieceselected('E2')" ng-class="getPositionClass('E2')"></i>
                 </td>
                 <td id="F3">
-                    <i ng-if="checkPosition('E3')===false" ng-click = "movehere('E3')">&nbsp;</i>
+                    <i ng-if="checkPosition('E3')===false" ng-click = "movehere('E3')" ng-class="getPositionClass('E3')">&nbsp;</i>
                     <i ng-if="checkPosition('E3')===true" ng-click = "pieceselected('E3')" ng-class="getPositionClass('E3')"></i>
                 </td>
                 <td id="E4">
-                    <i ng-if="checkPosition('E4')===false" ng-click = "movehere('E4')">&nbsp;</i>
+                    <i ng-if="checkPosition('E4')===false" ng-click = "movehere('E4')" ng-class="getPositionClass('E4')">&nbsp;</i>
                     <i ng-if="checkPosition('E4')===true" ng-click = "pieceselected('E4')" ng-class="getPositionClass('E4')"></i>
                 </td>
             </tr>
@@ -183,19 +183,19 @@
                     </checkers-my-piece>
                 </td> -->
                 <td id="F1">
-                    <i ng-if="checkPosition('F1')===false" ng-click = "movehere('F1')">&nbsp;</i>
+                    <i ng-if="checkPosition('F1')===false" ng-click = "movehere('F1')" ng-class="getPositionClass('F1')">&nbsp;</i>
                     <i ng-if="checkPosition('F1')===true" ng-click = "pieceselected('F1')" ng-class="getPositionClass('F1')"></i>
                 </td>
                 <td id="F2">
-                    <i ng-if="checkPosition('F2')===false" ng-click = "movehere('F2')">&nbsp;</i>
+                    <i ng-if="checkPosition('F2')===false" ng-click = "movehere('F2')" ng-class="getPositionClass('F2')">&nbsp;</i>
                     <i ng-if="checkPosition('F2')===true" ng-click = "pieceselected('F2')" ng-class="getPositionClass('F2')"></i>
                 </td>
                 <td id="F3">
-                    <i ng-if="checkPosition('F3')===false" ng-click = "movehere('F3')">&nbsp;</i>
+                    <i ng-if="checkPosition('F3')===false" ng-click = "movehere('F3')" ng-class="getPositionClass('F3')">&nbsp;</i>
                     <i ng-if="checkPosition('F3')===true" ng-click = "pieceselected('F3')" ng-class="getPositionClass('F3')"></i>
                 </td>
                 <td id="F4">
-                    <i ng-if="checkPosition('F4')===false" ng-click = "movehere('F4')">&nbsp;</i>
+                    <i ng-if="checkPosition('F4')===false" ng-click = "movehere('F4')" ng-class="getPositionClass('F4')">&nbsp;</i>
                     <i ng-if="checkPosition('F4')===true" ng-click = "pieceselected('F4')" ng-class="getPositionClass('F4')"></i>
                 </td>
                 <!-- <td id="D1"><i ng-click = "pieceselected('D1')" ng-class="icon-myPiece"></i></td> -->
