--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <div class="checkers" id="main">
             My TURN {{vm.myturn}}
             PLayer: {{vm.game.player}}
-            Player2: <span ng-show="vm.player2Found" >PLayer2 On Line</span><span ng-hide="vm.player2Found">Waiting for PLayer 2</span>
+            <span ng-if ="vm.game.player=='player1'"> Player2: <span ng-show="vm.player2Found" >PLayer2 On Line</span><span ng-hide="vm.player2Found">Waiting for PLayer 2</span></span>
         <table id="chess_board" cellpadding="0" cellspacing="0">
 <!--             <tr>
                 <td id="A8"><a href="#" class="rook black">&#9679;</a></td>
